mudado descricao para texto

--- a/app/views/coisas/_form.html.erb
+++ b/app/views/coisas/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :descricao %><br />
-    <%= f.text_field :descricao %>
+    <%= f.text_area :descricao %>
   </div>
   <div class="field">
     <%= f.label :tags %><br />
