--- a/app/assets/stylesheets/coisas.css.scss
+++ b/app/assets/stylesheets/coisas.css.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the coisas controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.new-coisa, .tag-cloud {
+   position: fixed;
+   bottom: 0;
+}
+.new-coisa {
+  right: 0;
+  background:black;
+  padding: 5px;
+}
+.new-coisa a{
+  color: green !important;
+  font-size: 25px;
+}
+
+.big {
+  font-size: 150%;
+}
+
